fix alignment of heading

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -70,6 +70,7 @@ buttons without borders
   font-size:inherit;
   margin-top: 0;
   margin-bottom:0;
+  align-self: center;
 }
 @import "edit";
 @import "structure-preview";
